map UV node produces image artifacts #45617

Closed
opened 2015-07-30 11:00:04 +02:00 by Daniel Widmann · 11 comments

System Information
Windows 7 Professional Service Pack 1
NVIDIA GeForce GTX 660

Blender Version
Broken: 2.75a c27589e

Short description of error
Using the map uv node in the compositor produces image artifacts. The uploaded images show one example image input, an example uv map and the result. The uv map is smooth and has no jumps, but the edges of the square in the output image look jagged. Also note that the output should not show the white line around the circle because there actually is a sudden change to black in the uv map. My guess is that there could be something wrong with the image coordinates used to access the uv map and/or the pixel weights used for filtering when applying the uv map.

Example_Image_Input.png
Example_UV_Input.png
Example_Output.png

Exact steps for others to reproduce the error
Attached is a simple blend file that renders a white square in low resolution and some linear texture coordinates that should not change the image when used as a uv map (though they change it a little). The composite node also adds a small offset to the uv map over time. So when stepping forward frame by frame the white square will slowly move; However, every two pixels it moves, it seems to jump back one pixel.
map_uv_bug.blend

**System Information** Windows 7 Professional Service Pack 1 NVIDIA GeForce GTX 660 **Blender Version** Broken: 2.75a c27589e **Short description of error** Using the map uv node in the compositor produces image artifacts. The uploaded images show one example image input, an example uv map and the result. The uv map is smooth and has no jumps, but the edges of the square in the output image look jagged. Also note that the output should not show the white line around the circle because there actually is a sudden change to black in the uv map. My guess is that there could be something wrong with the image coordinates used to access the uv map and/or the pixel weights used for filtering when applying the uv map. ![Example_Image_Input.png](https://archive.blender.org/developer/F216054/Example_Image_Input.png) ![Example_UV_Input.png](https://archive.blender.org/developer/F216056/Example_UV_Input.png) ![Example_Output.png](https://archive.blender.org/developer/F216058/Example_Output.png) **Exact steps for others to reproduce the error** Attached is a simple blend file that renders a white square in low resolution and some linear texture coordinates that should not change the image when used as a uv map (though they change it a little). The composite node also adds a small offset to the uv map over time. So when stepping forward frame by frame the white square will slowly move; However, every two pixels it moves, it seems to jump back one pixel. [map_uv_bug.blend](https://archive.blender.org/developer/F216053/map_uv_bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @nion

Added subscriber: @nion

Added subscriber: @KhaledAbdi

Added subscriber: @KhaledAbdi

Added subscriber: @Sergey

Added subscriber: @Sergey

This actually seems quite the same as #42844, but needs some further investigation.

This actually seems quite the same as #42844, but needs some further investigation.

This issue was referenced by 3ec81b814c

This issue was referenced by 3ec81b814c995b585f19c97cf87fee5b7195382b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author

I took todays dailys build (Date: 2015-09-02 03:41 Hash: f6e0262) and tested it. I made some tests with one fixed uv coordinate for the whole image and some tests with linear, "undistorted" uv maps and got the results I would expect. With other UV Maps, however, there still seems to be something off. See the strange checker like pattern on this bush after applying a uv map to the image:

checkerArtifacts.png

Edit: Note that the left side is only a zoomed in image of the right side and not the application of the uv map. The UV map has already been applied on the right side.

I have made a .blend file to reproduce this effect. There is also a text object with instructions included in the blend file:

map_uv_bug2.blend

This might also be caused by the EWA Filter itself rather than the MAP UV node.

I took todays dailys build (Date: 2015-09-02 03:41 Hash: f6e0262) and tested it. I made some tests with one fixed uv coordinate for the whole image and some tests with linear, "undistorted" uv maps and got the results I would expect. With other UV Maps, however, there still seems to be something off. See the strange checker like pattern on this bush after applying a uv map to the image: ![checkerArtifacts.png](https://archive.blender.org/developer/F229914/checkerArtifacts.png) *Edit: Note that the left side is only a zoomed in image of the right side and not the application of the uv map. The UV map has already been applied on the right side.* I have made a .blend file to reproduce this effect. There is also a text object with instructions included in the blend file: [map_uv_bug2.blend](https://archive.blender.org/developer/F229916/map_uv_bug2.blend) This might also be caused by the EWA Filter itself rather than the MAP UV node.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sergey Sharybin self-assigned this 2015-09-02 17:51:35 +02:00

Please don't report old reports with new issues, submit a new report instead.

Please don't report old reports with new issues, submit a new report instead.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45617
No description provided.