Fix T45617: Map UV node produces image artifacts

Basically filtering was happening twice, first time by applying weights of EWA
filter itself and then by applying subpixel offset while reading pixel values.