source/blender/compositor/operations/COM_DisplaceOperation.cpp
@@ -60,7 +60,7 @@ void DisplaceOperation::executePixelSampled(float output[4], float x, float y, P
 	}
 	else {
 		/* EWA filtering (without nearest it gets blurry with NO distortion) */
-		this->m_inputColorProgram->readFiltered(output, uv[0], uv[1], deriv[0], deriv[1], COM_PS_BILINEAR);
+		this->m_inputColorProgram->readFiltered(output, uv[0], uv[1], deriv[0], deriv[1]);
 	}
 }
 
