source/blender/compositor/operations/COM_ReadBufferOperation.cpp
@@ -89,7 +89,7 @@ void ReadBufferOperation::executePixelExtend(float output[4], float x, float y, 
 	}
 }
 
-void ReadBufferOperation::executePixelFiltered(float output[4], float x, float y, float dx[2], float dy[2], PixelSampler sampler)
+void ReadBufferOperation::executePixelFiltered(float output[4], float x, float y, float dx[2], float dy[2])
 {
 	if (m_single_value) {
 		/* write buffer has a single value stored at (0,0) */
@@ -98,7 +98,7 @@ void ReadBufferOperation::executePixelFiltered(float output[4], float x, float y
 	else {
 		const float uv[2] = { x, y };
 		const float deriv[2][2] = { {dx[0], dx[1]}, {dy[0], dy[1]} };
-		m_buffer->readEWA(output, uv, deriv, sampler);
+		m_buffer->readEWA(output, uv, deriv);
 	}
 }
 
